--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -13,3 +13,7 @@ flask-bcrypt==1.0.1
 bcrypt==4.2.1
 python-dotenv==1.0.1
 Flask-Mail==0.10.0
+cloudinary==1.42.1
+six==1.17.0
+urllib3==2.3.0
+certifi==2025.1.31
